@startuml

title __CONFIG's Class Diagram__\n

  namespace br.com.psytecnology {
    namespace config {
      class br.com.psytecnology.config.InternacionalizacaoConfig {
          + localValidatorFactoryBean()
          + messageSource()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace config {
      class br.com.psytecnology.config.SecurityConfig {
          + SecurityConfig()
          + configure()
          + jwtFilter()
          + passwordEncoder()
          # configure()
          # configure()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace config {
      class br.com.psytecnology.config.SwaggerConfig {
          + apiKey()
          + docket()
          - apiinfo()
          - contact()
          - defaultAuth()
          - securityContext()
      }
    }
  }
  

  br.com.psytecnology.config.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  br.com.psytecnology.config.SecurityConfig o-- br.com.psytecnology.security.jwt.JwtService : jwtService
  br.com.psytecnology.config.SecurityConfig o-- br.com.psytecnology.service.UsuarioService : usuarioService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
